--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -2,7 +2,9 @@ hostname "24/7 KillSurf | Divinity-community.com"
 rcon_password "Le Piano"
 sv_contact "noting"
 mp_timelimit "60" 
-sv_allowdownload
+sv_allowdownload 1
+sv_allowupload 1
+sv_downloadurl server.crsofficial.co.uk/home/tf2/tf2server/tf/maps
 net_maxfilesize 64
 sm_cvar sv_airaccelerate 1500
 sm_trailme_enabled 1
