fixed map problem

--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -4,6 +4,7 @@ sv_contact "noting"
 mp_timelimit "60" 
 sv_allowdownload 1
 sv_allowupload 1
+sv_maxrate 100000
 sv_downloadurl server.crsofficial.co.uk/home/tf2/tf2server/tf/maps
 net_maxfilesize 64
 sm_cvar sv_airaccelerate 1500
