--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -4,11 +4,11 @@ sv_contact "noting"
 mp_timelimit "60" 
 sv_allowdownload 1
 sv_allowupload 1
-sv_maxrate 5000
+sv_maxrate 0
 sv_minrate 0
-sv_maxupdaterate 15
-sv_downloadurl server.crsofficial.co.uk/home/tf2/tf2server/tf/mapdownloads
-net_maxfilesize 64
+sv_maxupdaterate 1000
+sv_downloadurl server.crsofficial.co.uk/home/tf2/tf2server/tf/maps
+sv_maxfilesize 64
 sm_cvar sv_airaccelerate 1500
 sm_trailme_enabled 1
 sm_hr_adminflag o
