fixed map problem

--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -4,7 +4,7 @@ sv_contact "noting"
 mp_timelimit "60" 
 sv_allowupload 1
 sv_allowdownload 0
-sv_downloadurl server.crsofficial.co.uk/home/tf2/tf2server/tf/maps
+sv_downloadurl "http://server.crsofficial.co.uk/home/tf2/tf2server/tf/maps"
 sm_cvar sv_airaccelerate 1500
 sm_trailme_enabled 1
 sm_hr_adminflag o
