--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -4,7 +4,7 @@ sv_contact "noting"
 mp_timelimit "60" 
 sv_allowupload 1
 sv_allowdownload 1
-sv_downloadurl "http:/dl.openfastdl.net/tf"
+sv_downloadurl "http://dl.openfastdl.net/tf"
 sm_cvar sv_airaccelerate 1500
 sm_trailme_enabled 1
 sm_hr_adminflag o
