--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -8,3 +8,5 @@ sv_downloadurl "http://dl.openfastdl.net/tf"
 sm_cvar sv_airaccelerate 1500
 sm_trailme_enabled 1
 sm_hr_adminflag o
+tf_allow_player_use 1
+sv_allow_votes 0
