--- a/cfg/sourcemod/player-trails.cfg
+++ b/cfg/sourcemod/player-trails.cfg
@@ -5,12 +5,12 @@
 // Admin flags which will have access to grenade trails. empty=all admins
 // -
 // Default: "sz"
-sm_playertrails_adminflags "sz"
+sm_playertrails_adminflags ""
 
 // The prefix before each chat message.
 // -
 // Default: "[xG] "
-sm_playertrails_chatprefix "[xG] "
+sm_playertrails_chatprefix ""
 
 // Specifies whether everyone or only donators will receive trails
 // -
