--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -11,3 +11,5 @@ sm_hr_adminflag o
 tf_allow_player_use 1
 sv_allow_votes 0
 tf_forced_holiday 2
+tf_weapon_criticals 0
+tf_avoidteammates_pushaway 0
