--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -13,3 +13,7 @@ sv_allow_votes 0
 tf_forced_holiday 2
 tf_weapon_criticals 0
 tf_avoidteammates_pushaway 0
+sm_showrules_showonjoin 1
+sm_showrules_showtoadmins 1
+sm_showrules_displayattempts 20
+sm_showrules_showmenuoptions 0
